--- a/Style.css
+++ b/Style.css
@@ -8,6 +8,7 @@
 
 .container {
     display: flex;
+    background-color: black;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
