--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@
 
 .container {
     display: flex;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
