--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@
     font-size: 30px;
     line-height: 10px;
     font-family: "arial";
-    background-color: #ffffff00
+    background-color: #000000
     
 }
 
@@ -20,7 +20,7 @@
     width: 300px;
     height: 100px;
     border: none;
-    color: white;
+    color: rgb(255, 255, 255);
     background-color: rgb(46, 46, 46);
     border-radius: 4px;
     transition: ease-out 0.3s;
