--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@
     font-size: 30px;
     line-height: 10px;
     font-family: "arial";
-    background-color: #000000
+    background-color: #ffffff
     
 }
 
